--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.udemy.com/course/*"],
-      "js": ["jquery-3.6.0.min.js", "scripts/cssChanger.js"]
+      "js": ["jquery-3.6.0.min.js", "cssChanger.js"]
     }
   ]
 }
