--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Udemy Dark Mode",
   "version": "1.0",
 
   "content_scripts": [
     {
       "matches": ["*://*.udemy.com/course/*"],
-      "js": ["jquery-3.6.0.min.js", "cssChanger.js"]
+      "js": ["jquery-3.6.0.min.js", "scripts/cssChanger.js"]
     }
   ]
 }
